# stonks

./: .clang-format  .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
.travis/: before-deploy.sh  build.sh  download-github-asset.sh  failure.sh  install-dependencies.sh
cmake/macOS/: Info.plist  stonk.icns
res/info/: itemList.csv
res/model/: akuma.mtl  door.mtl  doorarch.mtl  flattile.mtl  flatwall.mtl  ghost.mtl  goblin_baseball.mtl  goblin_fighter.mtl  goblin_warrior_spear.mtl  gobline_warhammer.mtl  penta.mtl  player_female.mtl  player_male.mtl  rock_golem.mtl  skeleton_knight.mtl  stairs.mtl  tav7.mtl  tile1.mtl  wall_corner.mtl
src/: AABB.cpp  AABB.h  AABBLinkedList.cpp  AABBLinkedList.h  AABBList.cpp  AABBList.h  AABBNode.cpp  AABBNode.h  Camera.cpp  Camera.h  CameraMap.cpp  CameraMap.h  Collision.cpp  Collision.h  EasySound.cpp  EasySound.h  Gl.hpp  Glut.hpp  Main.cpp  Main.hpp  PlainLinkedList.cpp  PlainLinkedList.h  PlainNode.cpp  PlainNode.h  Shay.cpp  Shay.hpp  Sound.cpp  Sound.h  SoundTime.cpp  SoundTime.h  TexturedPolygons.cpp  TexturedPolygons.h  Workaround.cpp  Workaround.hpp  camera.cpp  camera.h  cameraMap.cpp  cameraMap.h  collision.cpp  collision.h  (+3 more)
src/Akuma/: Akuma.cpp  Akuma.hpp  Camera.hpp  CombatLog.cpp  CombatLog.hpp  Dice.cpp  Dice.hpp  EnemyFactor.hpp  EnemyFactory.cpp  EnemyFactory.hpp  EntityLoader.cpp  EntityLoader.hpp  Floor.cpp  Floor.hpp
src/Akuma/GridDisplay/: GLDisplay.cpp  GLDisplay.hpp  GridDisplay.cpp  GridDisplay.hpp
src/Akuma/Items/: ItemManager.cpp  ItemManager.hpp  itemList.csv
src/Akuma/Pathing/: Grid.cpp  Grid.hpp  Node.cpp  Node.hpp  Pathfinding.cpp  Pathfinding.hpp
src/Akuma/ProceduralGen/BSP/: BSP.cpp  BSP.hpp  Node.cpp  Node.hpp
src/Akuma/RNG/: Dice.cpp  Dice.hpp
src/Akuma/TurnManager/: TurnManager.cpp  TurnManager.hpp
src/ECS/: CameraComponent.cpp  CameraComponent.hpp  CombatComponent.cpp  CombatComponent.hpp  Components.hpp  DeadComponent.cpp  DeadComponent.hpp  ECS.cpp  ECS.hpp  EnemyComponent.cpp  EnemyComponent.hpp  EquipmentComponent.cpp  EquipmentComponent.hpp  FloorComponent.cpp  FloorComponent.hpp  InventoryComponent.cpp  InventoryComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  MoveComponent.cpp  MoveComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  ScaleComponent.cpp  ScaleComponent.hpp  SpriteComponent.hpp  StairComponent.cpp  StairComponent.hpp  StatComponent.cpp  StatComponent.hpp  TurnComponent.cpp  TurnComponent.hpp
src/Menu/: Menu.cpp  Menu.hpp
src/ObjLoader/: Material.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  MtlLoader.cpp  MtlLoader.hpp  ObjDisplay.cpp  ObjDisplay.hpp  ObjLoader.cpp  ObjLoader.hpp
src/Shay/: AABB.cpp  AABB.h  AABB.hpp  AABBList.cpp  AABBList.h  AABBList.hpp  AABBNode.cpp  AABBNode.h  AABBNode.hpp  Camera.cpp  Camera.h  Camera.hpp  CameraMap.cpp  CameraMap.h  CameraMap.hpp  Collision.cpp  Collision.h  Collision.hpp  Math.hpp  PlainLinkedList.cpp  PlainLinkedList.h  PlainLinkedList.hpp  PlainNode.cpp  PlainNode.h  PlainNode.hpp  Shay.cpp  Shay.hpp  TexturedPolygons.cpp  TexturedPolygons.h  TexturedPolygons.hpp
src/Stonk/: Audio.cpp  Audio.hpp  BaseState.hpp  Camera.hpp  Collision.cpp  Collision.hpp  Engine.cpp  Engine.hpp  Entity.hpp  EntityLoader.cpp  EntityLoader.hpp  OpenGl.hpp  Physics.cpp  Physics.hpp  Player.hpp  Stonk.cpp  Stonk.hpp  Viewport.hpp
src/Stonk/GridDisplay/: GLDisplay.cpp  GLDisplay.hpp  GridDisplay.cpp  GridDisplay.hpp
src/Stonk/Pathing/: Grid.hpp  Node.cpp  Node.hpp  Pathfinding.cpp  Pathfinding.hpp
src/Stonk/ProceduralGen/BSP/: BSP.cpp  BSP.hpp  Node.hpp
